--- a/estilo.css
+++ b/estilo.css
@@ -1,8 +1,9 @@
 @charset "UTF-8";
 body{background: linear-gradient(to bottom, #20344f, white); text-align:center; font-family: Verdana;}
 header{height: 100px; text-align:center; color: #fff; font-size: 26px; margin: 0 auto; padding: 20px;}	
-nav{display: flex; list-style: none; margin-left: 0; padding-left: 0; display: flex; Flax-wrap: wrap; justify-content: center;}
+nav{list-style: none; margin-left: 0; padding-left: 0; display: flex; Flax-wrap: wrap; justify-content: center;}
 li {display: inline-block; margin: 0px; font-size: 16px;}	
 li a {padding: 10px 30px; border: 4px ridge #7289a1; background-color: #20344f; text-decoration: none; color: #fff;}
 li a:hover {padding: 10px 30px; border: 4px ridge #7289a1; background-color: #7289a1; color: #101b29; font-style: bold;} 
+section{padding: 30px;}
 footer, a{background-color: #20344f; padding: 10px; color: #fff; text-decoration: none;}
